--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,6 +32,26 @@ $fontJose : 'Josefin Sans', sans-serif;
 @import 'location.scss';
 @import 'media.scss';
 @import 'gallery.scss';
+
+#skipNavi li a {
+	display: block;
+	width: 100%;
+	height: 40px;
+	background: $bgColor;
+	font: bold 15px/40px '맑은 고딕';
+	color: #fff;
+	text-align: center;
+	position: fixed;
+	top: -40px;
+	left: 0;
+  z-index: 10;
+
+	&.on {
+		top: 0;
+	}
+}
+
+
 /*header --------------------------------------------*/
 #header {
 	position: fixed;
@@ -57,7 +77,7 @@ $fontJose : 'Josefin Sans', sans-serif;
 		position: relative;
 		>h1 {
 			position: absolute;
-			left: 30px;
+			left: 0;
 			top: 50%;
 			transform: translateY(-50%);
 			letter-spacing: 5px;
@@ -124,6 +144,7 @@ $fontJose : 'Josefin Sans', sans-serif;
 			width: 20px;
 			height: 20px;
 			display: none;
+			z-index: 11;
 
 			&::before {
 				content: "";
@@ -162,44 +183,27 @@ $fontJose : 'Josefin Sans', sans-serif;
 				transition: 0.5s;
 			}
 
-			&.on {
-				&::before {
-					top: 50%;
-					margin-top: -1px;
-					transform: rotate(45deg);
-				}
-
-				&::after {
-					bottom: 50%;
-					margin-bottom: -1px;
-					transform: rotate(-45deg);
-				}
-
-				span {
-					transform: translateX(100%);
-					opacity: 0;
-				}
-			}
 		}
 
 		//모바일메뉴
 		.menuMo {
-			width: 270px;
+			width: 100%;
 			height: 100vh;
-			background: #333;
+			background: $bgColor;
 			padding: 35px 30px;
 			position: fixed;
 			top: 0;
-			left: -270px;
+			right:-100%;
 			z-index: 10;
 			transition: 0.5s;
+		
 
 			&.on {
-				left: 0;
+				right: 0;
 			}
 
 			h1 {
-				border-bottom: 1px solid #666;
+				border-bottom: 1px solid #fff;
 				padding-bottom: 30px;
 
 				a {
@@ -214,16 +218,72 @@ $fontJose : 'Josefin Sans', sans-serif;
 					color: #aaa;
 				}
 			}
-
 			ul {
 				li a {
 					display: block;
 					padding: 20px 0;
-					border-bottom: 1px solid #444;
+					border-bottom: 1px solid #fff;
 					font: bold 14px/1 "Quicksand";
-					color: #888;
+					color: #fff;
 					text-align: center;
+					
 				}
+			}
+			.close {
+				position: absolute;
+				right: 30px;
+				top: 30px;
+
+				width: 20px;
+				height: 20px;
+			
+				z-index: 11;
+				color: #fff;
+				&::before {
+					content: "";
+					display: block;
+					width: 100%;
+					height: 2px;
+					background: #fff;
+					position: absolute;
+					top: 0;
+					left: 0;
+					transition: top 0.5s, transform 0.5s 0.5s;
+					top: 50%;
+					margin-top: -1px;
+					transform: rotate(45deg);
+				}
+	
+				&::after {
+					content: "";
+					display: block;
+					width: 100%;
+					height: 2px;
+					background: #fff;
+					position: absolute;
+					bottom: 0;
+					left: 0;
+					transition: bottom 0.5s, transform 0.5s 0.5s;
+					bottom: 50%;
+					margin-bottom: -1px;
+					transform: rotate(-45deg);
+				}
+	
+				span {
+					display: block;
+					width: 100%;
+					height: 2px;
+					background: #fff;
+					position: absolute;
+					top: 50%;
+					margin-top: -1px;
+					left: 0;
+					text-indent: -9999px;
+					transition: 0.5s;
+					transform: translateX(100%);
+					opacity: 0;
+				}
+
 			}
 		}
 	}
@@ -240,6 +300,7 @@ main {
 
 	section {
 		padding: 100px 0;
+
 	}
 
 	section>h2,
@@ -292,11 +353,18 @@ main {
 						z-index: 5;
 
 						span {
+							position: relative;
+							display: inline-block;
+							overflow: hidden;
 							font-size: 18px;
+							
 							color: #fff;
+					
 						}
 
 						h2 {
+							position: relative;
+							overflow: hidden;
 							margin: 50px 0;
 							font-size: 50px;
 							color: #fff;
@@ -304,6 +372,8 @@ main {
 						}
 
 						p {
+							position: relative;
+							overflow: hidden;
 							font-size: 25px;
 							color: #fff;
 						}
@@ -322,7 +392,6 @@ main {
 
 					}
 				}
-
 				.con1 {
 					&:after {
 						background-image: url(../img/main/visual01.jpg);
@@ -338,6 +407,18 @@ main {
 				.con3 {
 					&:after {
 						background-image: url(../img/main/visual03.jpg);
+					}
+				}
+				.swiper-slide-next, 
+				.swiper-slide-prev {
+					.text_box  i {
+						opacity: 0;
+					}
+				}
+				.swiper-slide-active {
+					.text_box  i {
+						opacity: 1;
+						animation: aniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
 					}
 				}
 			}
@@ -428,6 +509,8 @@ main {
 				}
 
 				.pic {
+					position: relative;
+					overflow: hidden;
 					height: 500px;
 					width: 100%;
 
@@ -437,14 +520,12 @@ main {
 						object-fit: cover;
 					}
 				}
-
 				.text_box {
 					background: #fff;
 					padding: 30px 20px;
 					position: absolute;
 					width: 85%;
 					box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-
 					bottom: -50px;
 					left: 50%;
 					transform: translateX(-50%);
@@ -463,7 +544,6 @@ main {
 						font-size: 14px;
 					}
 				}
-
 				&:nth-of-type(1) {
 					top: 50px;
 				}
@@ -476,26 +556,33 @@ main {
 					top: 150px;
 				}
 			}
-
 			&.on {
 				li {
+					.pic {
+						i {
+							animation: aniBottom both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
+							opacity: 1;
+						}
+					}
 					&:nth-of-type(1) {
-
+	
 						top: 0;
 					}
-
 					&:nth-of-type(2) {
-
+	
 						top: 0;
 					}
-
+	
 					&:nth-of-type(3) {
-
+	
 						top: 0;
 					}
 				}
+			
 			}
+
 		}
+
 
 	}
 
@@ -517,6 +604,10 @@ main {
 			width: 70%;
 			float: right;
 			overflow: hidden;
+			transition: 1s;
+			opacity: 0;
+			transform: translateX(20%);
+			
 
 			.text_list {
 
@@ -550,10 +641,6 @@ main {
 							color: $bgColor03;
 						}
 					}
-
-					// &:nth-of-type(1){background: red;}
-					// &:nth-of-type(2){background: blue;}
-					// &:nth-of-type(3){background: orange;}
 				}
 			}
 
@@ -563,6 +650,9 @@ main {
 			position: absolute;
 			left: 0;
 			bottom: 80px;
+			opacity: 1;
+			transition: 1s linear;
+			transform: translateX(-50%);
 
 			&::after {
 				content: '';
@@ -602,17 +692,36 @@ main {
 				}
 			}
 		}
+		&.on{
+			.text_con , .btn {
+				transform: translateX(0);
+				opacity: 1;
+			}
+		}
 	}
-
 	/*Sustainability ---------------------------------------------------*/
 	#Sustainability {
 		.inner {
 			position: relative;
 			max-width: 100%;
 			width: 100%;
-			height: 800px;
+			height: 50px;
+			opacity: 0;
+			transition: 1s;
 			background: url(../img/main/repair.jpg) no-repeat center/cover;
+			&.on{
+				height:800px;
+				opacity: 1;
+				.Sustainability_con {
+					opacity: 1;
+					
+				
+				}
+			}
+		
 		}
+
+
 
 		h2 {
 			max-width: 1180px;
@@ -621,11 +730,13 @@ main {
 		}
 
 		.Sustainability_con {
+			opacity: 0;
 			position: absolute;
 			bottom: -80px;
 			left: 50%;
 			transform: translateX(-50%);
 			max-width: 1000px;
+			transition:1s;
 
 			&::after {
 				content: '';
@@ -741,7 +852,7 @@ main {
 				}
 
 				.text_box {
-					padding: 50px 70px;
+					padding: 50px 20px;
 					box-sizing: border-box;
 
 					h3 {
@@ -776,8 +887,8 @@ main {
 				}
 			}
 		}
+	
 	}
-
 	/*journal ---------------------------------------------------*/
 	#journal {
 		ul {
@@ -796,6 +907,8 @@ main {
 
 				.pic {
 					height: 300px;
+					position: relative;
+					overflow: hidden;
 
 				}
 
@@ -809,13 +922,23 @@ main {
 
 			}
 		}
+		&.on {
+			ul li {
+				.pic {
+					i {
+						animation: aniBottom both cubic-bezier(0.68, 0, 0.265, 1) 1.2s 0.2s;
+  					opacity: 1;
+					}
+				}
+			}
+		}
 	}
 
 	/*bake ---------------------------------------------------*/
 	#bake {
 		background: $bgColor04;
-
 		.inner {
+		
 			&::after {
 				content: '';
 				display: block;
@@ -910,16 +1033,17 @@ main {
 	#repair {
 		.inner {
 			position: relative;
-
+		
 			&::after {
 				content: '';
 				display: block;
 				position: absolute;
-				bottom: 0;
+				top: 40%;
 				right: 0;
 				width: 40%;
-				height: 700px;
+				height: 0;
 				background: $bgColor04;
+				transition:1s;
 			}
 
 			.top_box {
@@ -930,31 +1054,36 @@ main {
 				.mask01 {
 					position: absolute;
 					left: 0;
+					transform: translateX(-50px);
 					top: 0;
 					width: 50%;
 					height: 400px;
 					background: url(../img/main/repair.jpg) no-repeat center/cover;
+					transition: 1s;
 
 				}
 
 				.mask02 {
 					position: absolute;
 					right: 5%;
+					transform: translateX(50px);
 					top: 10%;
 					width: 55%;
 					height: 500px;
 					background: url(../img/main/repair02.jpg) no-repeat center/cover;
+					transition: 1s;
 				}
 
 				.text_box {
 					position: absolute;
 					left: 50%;
 					top: 60%;
-					transform: translate(-50%, -50%);
+					transform: translate(-50%, -30%);
 					background: $bgColor02;
 					width: 500px;
 					padding: 30px;
 					box-sizing: border-box;
+					transition: 1s;
 
 					h3 {
 						font-size: 30px;
@@ -982,6 +1111,7 @@ main {
 				padding-bottom: 30px;
 				position: relative;
 				z-index: 2;
+				margin: 0 -10px;
 				margin-top: 150px;
 
 				&::after {
@@ -999,7 +1129,7 @@ main {
 				ul {
 					float: right;
 					width: 100%;
-					margin: 0 -10px;
+				
 
 					&::after {
 						content: '';
@@ -1024,7 +1154,24 @@ main {
 				}
 			}
 		}
-
+		&.on{
+			.inner {
+			&::after {
+				height:700px;
+			}
+				.top_box {
+					.mask01, 
+					.mask02 {
+						transform: translateX(0);
+					}
+					.text_box {
+						transform: translate(-50%, -50%);
+					}
+					
+				}
+			
+		}
+	}
 	}
 
 	/*Island ---------------------------------------------------*/
@@ -1226,6 +1373,66 @@ main {
 		}
 	}
 }
+/*popup*/
+#popup{
+	display: none;
+	width:500px; 
+	height:500px;
+	border:3px solid $pointColor;
+	background:#111; 
+	position:fixed;
+	top:100px;
+	left:100px;
+	// transform: translate(-50%, -50%);
+	z-index: 100;
+	.cont{
+		width:100%; 
+		min-height:150px; 
+		font-size:30px; 
+		.pic {
+			width:100%;
+			height:300px;
+			img {
+				width: 100%;height:100%;
+				object-fit: cover;
+			}
+		}
+		.text_box {
+			padding:30px 20px;
+			text-align: center;
+			h2 {
+				color:#fff;
+				font-family: $fontJose;
+			}
+			p {
+				margin-top:20px;
+				font-family: $fontJose;
+				color:#fff;
+			}
+		}
+		
+	} 
+	.wrap{
+	position: absolute;
+	bottom:10px;
+		label{
+			margin-left:10px; 
+			font:12px/1 ; 
+			color:#fff; 
+		}
+	}   
+	.close_btn{
+		position:absolute; 
+		top:-3px; right:-54px; 
+		font-size: 14px;
+		background:$bgColor;
+		color:#fff; 
+		font-weight: 700;
+		padding:10px;
+	}
+}
+
+
 
 /*footer ---------------------------------------*/
 #footer {
@@ -1284,6 +1491,29 @@ main {
 	}
 }
 
+//animation
+@keyframes opa {
+	0% {opacity: 0;}
+
+	50% {opacity: 0;}
+
+	51% {opacity: 1;}
+
+	100% {opacity: 1;}
+}
+
+@keyframes aniLeft {
+	0% {transform: translateX(-101%);}
+
+	50% {transform: translateX(0);}
+
+	100% {transform: translateX(101%);}
+}
+@keyframes aniBottom {
+	0% {transform:translateY(101%);}
+	50% {transform:translateY(0);}
+	100% {transform:translateY(-101%);}
+	}
 /*tablet -------------------------------------*/
 @media screen and (max-width: $tablet) {
 
@@ -1292,18 +1522,15 @@ main {
 		.inner {
 			width: 100%;
 			height: 80px;
-
 			>h1 {
 				left: 0;
 				a {
 					font-size: 25px;
 				}
 			}
-
 			.menuWeb {
 				display: none;
 			}
-
 			// 햄버거버튼
 			.btnCall {
 				display: block;
@@ -1453,6 +1680,7 @@ main{
 			top:60px;
 			right:30px;
 			left:auto;
+			transform: none;
 			li {
 				width:30px;height:30px;
 				float:left;
@@ -1466,6 +1694,8 @@ main{
 		.text_con {
 			width:100%;
 			height:auto;
+			opacity: 1;
+			transform: none;
 			.text_list{
 				position:relative;
 				li {
@@ -1594,9 +1824,11 @@ main{
 				z-index: 3;
 				.mask01 {
 					width: 100%;
+					transform: none;
 				}
 				.mask02 {
 					display: none;
+					transform: none;
 				}
 				.text_box {
 					width: 80%;
@@ -1645,6 +1877,19 @@ main{
 
 } //main
 
+#popup{
+	max-width:500px;
+	width:80%; 
+	.cont{
+		.pic {
+			height:200px;
+		}
+		.text_box {
+			padding:30px 20px;
+			text-align: center;
+		}
+	} 
+}
 
 	/*footer ---------------------------------------*/
 	#footer {
@@ -1659,6 +1904,7 @@ main{
 			}
 		}
 	}
+
 }
 
 @media screen and (max-width: $mobile) {
@@ -1767,6 +2013,9 @@ main{
 			}
 		}
 
+	}
+	#popup{ 
+		display: none !important;
 	}
 
 }//mobile
