--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -1,13 +1,13 @@
 .location {
   position: relative;
-
+  transition: 0.5s;
   .inner {
     .visual {
       .mask {
         width: 100%;
         height: 500px;
         position: relative;
-
+        transition: 0.5s;
         .pic {
           width: 300px;
           position: absolute;
@@ -16,7 +16,7 @@
           transform: translateY(-50%);
           z-index: 2;
           border: 2px solid #111;
-
+          transition: 0.5s;
           img {
             display: block;
           }
@@ -34,60 +34,105 @@
           filter: blur(5px);
         }
       }
-    }
 
-    .location {
-      position: relative;
-      margin-top: 50px;
-      margin-bottom: 80px;
+      .maps {
+        position: relative;
+        margin-top: 50px;
+        margin-bottom: 80px;
+        transition: 0.5s;
 
-      &::after {
-        content: '';
-        display: block;
-        clear: both;
-      }
-
-      .left {
-        width: 50%;
-
-        h2 {
-          font-size: 30px;
-          margin-bottom: 30px;
+        &::after {
+          content: '';
+          display: block;
+          clear: both;
+        }
+      
+        .left {
+          width: 40%;
+          .text_box {
+            transition:0.5s;
+          h2 {
+            font-size: 30px;
+            margin-bottom: 30px;
+          }
         }
       }
 
-      .right {
-        position: absolute;
-        right: 100px;
-        bottom: 0;
-        width: 40%;
-        height: 400px;
-        background: $bgColor02;
+        .right {
+          position: absolute;
+          right: 50px;
+          bottom: 0;
+          width: 50%;
+          height: 400px;
+          transition:0.5s;
+      
+          #map {
+            width: 100%;
+            height: 100%;
+
+          }
+
+          .map_list {
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            &::after {
+              content: '';
+              display: block;
+              clear: both;
+            }
+
+            li {
+              float: left;
+              width: 33.3333%;
+              height: 40px;
+              line-height: 40px;
+              text-align: center;
+
+              a {
+                display: block;
+                color: #111;
+                font-weight: 700;
+                transition: 0.5s;
+              }
+
+              &.on {
+                a {
+                  background: $bgColor;
+                  color: #fff;
+                }
+              }
+            }
+          }
+        }
 
       }
-
     }
   }
+
   .banner_con {
-    margin-top:160px;
+    margin-top: 160px;
+
     .text_box {
-      max-width:1180px;
+      max-width: 1180px;
       margin: 0 auto 50px;
-    h2 {
-      font-size: 3em;
-      margin-bottom:20px;
-      &::after {
-        content: '';
-        display: block;
-        position: absolute;
-        width: 25px;
-        height: 2px;
-        background-color: #ee7b34;
+
+      h2 {
+        font-size: 3em;
+        margin-bottom: 20px;
+
+        &::after {
+          content: '';
+          display: block;
+          position: absolute;
+          width: 25px;
+          height: 2px;
+          background-color: #ee7b34;
+        }
       }
     }
   }
-  }
+
   .banner {
+    overflow: hidden;
     width: 100%;
     position: relative;
     background: rgba(0, 0, 0, .8);
@@ -97,6 +142,7 @@
       display: block;
       clear: both;
     }
+
     .list {
       li {
         float: left;
@@ -133,8 +179,9 @@
       width: 50px;
       text-align: center;
       line-height: 50px;
+
       i {
-        color:#fff;
+        color: #fff;
       }
     }
 
@@ -150,8 +197,9 @@
       width: 50px;
       text-align: center;
       line-height: 50px;
+
       i {
-        color:#fff;
+        color: #fff;
       }
     }
 
@@ -181,10 +229,12 @@ aside {
   padding: 5vw;
   opacity: 0;
 
+
   .pic {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    border: 3px solid $pointColor;
 
     img {
       width: 100%;
@@ -200,6 +250,241 @@ aside {
     font: bold 12px/1 'arial';
     color: #fff;
     cursor: pointer;
+  }
+}
+
+@media screen and (max-width:$tablet) {
+  .location {
+    .inner {
+      .visual {
+        .mask {
+          .pic {
+            left: 30px;
+          }
+        }
+        .maps {
+          .left {
+            width: 50%;
+            position: absolute;
+            top: -400px;
+            right: 20px;
+            background: rgba(255, 255, 255, 0.5);
+            padding: 20px;
+          }
+          .right {
+            position: relative;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            #map {
+              width: 100%;
+              height: 100%;
+              .map_list {
+                &::after {
+                  content: '';
+                  display: block;
+                  clear: both;
+                }
+                li {
+                  float: left;
+                  width: 33.3333%;
+                  height: 40px;
+                  line-height: 40px;
+                  text-align: center;
+                  a {
+                    display: block;
+                    color: #111;
+                    font-weight: 700;
+                    transition: 0.5s;
+                  }
+                  &.on {
+                    a {
+                      background: $bgColor;
+                      color: #fff;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .banner_con {
+      .text_box {
+        padding: 0 30px;
+      }
+    }
+  }
+}
+
+
+
+@media screen and (max-width:$mini) {
+  .location {
+    .inner {
+      .visual {
+        .mask {
+          display: none;
+        }
+
+
+        .maps {
+          .left {
+            width: 100%;
+            position: relative;
+            top: auto;
+            right: 0;
+            float: none;
+            z-index: 2;
+            padding: 20px;
+            height: 300px;
+            background: none;
+
+            .text_box {
+              position: absolute;
+              top: 50%;
+              transform: translateY(-50%);
+              z-index: 3;
+
+              h2 {
+                position: relative;
+                z-index: 2;
+                color: #fff;
+              }
+
+              p {
+                position: relative;
+                z-index: 2;
+                color: #fff;
+              }
+            }
+
+            &::after {
+              position: absolute;
+              top: 0;
+              left: 0;
+              content: '';
+              display: block;
+              width: 100%;
+              height: 100%;
+              background: url(../img/location/visual02.jpg) no-repeat bottom/cover;
+              filter: blur(5px);
+            }
+          }
+
+          .right {
+            height: 300px;
+            position: relative;
+            float: none;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+
+            #map {
+              width: 100%;
+              height: 100%;
+            }
+
+            .map_list {
+              li {
+                a {
+                  display: block;
+                  color: #111;
+                  font-weight: 700;
+                  transition: 0.5s;
+                  font-size: 12px;
+
+                }
+
+                &.on {
+                  a {
+                    background: $bgColor;
+                    color: #fff;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .banner_con {
+
+    .text_box {
+      padding: 0 30px;
+    }
+  }
+}
+
+
+
+@media screen and (max-width:$mobile) {
+  .location {
+    .inner {
+      .visual {
+        .mask {
+          display: none;
+        }
+
+        .maps {
+          .left {
+            width: 100%;
+            position: relative;
+            top: auto;
+            right: 0;
+            float: none;
+            z-index: 2;
+            padding: 0;
+            margin-bottom: 20px;
+            background: none;
+          }
+
+          .right {
+            height: 300px;
+            position: relative;
+            float: none;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+
+            #map {
+              width: 100%;
+              height: 100%;
+            }
+
+            .map_list {
+              li {
+                a {
+                  display: block;
+                  color: #111;
+                  font-weight: 700;
+                  transition: 0.5s;
+                  font-size: 12px;
+
+                }
+
+                &.on {
+                  a {
+                    background: $bgColor;
+                    color: #fff;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .banner_con {
+
+      .text_box {
+        padding: 0 30px;
+      }
+    }
   }
 }
 
