--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -27,6 +27,8 @@ $orgLineColor :#ff6100;
       background: $bgColor;
       height: 60%;
       width: 100%;
+      opacity: 1;
+
     }
     .pic {
       position: relative;
@@ -47,20 +49,39 @@ $orgLineColor :#ff6100;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       z-index: 1;
       padding: 40px;
-
+      overflow: hidden;
       h1 {
+        position: relative;
+        overflow: hidden;
         margin-bottom: 20px;
+      
+        i {
+          opacity: 1;
+          animation: aniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
+        }
       }
 
       h2 {
+        position: relative;
+        overflow: hidden;
         margin-bottom: 30px;
         text-align: left;
         font-size: 20px;
+        i {
+          opacity: 1;
+          animation: aniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
+        }
       }
 
       p {
+        position: relative;
+        overflow: hidden;
         font-size: 18px;
         line-height: 1.3;
+        i {
+          opacity: 1;
+          animation: aniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
+        }
       }
     }
   }
@@ -84,7 +105,8 @@ $orgLineColor :#ff6100;
         position: relative;
         float: left;
         width: calc(33.3333% - 40px);
-        margin: 0 20px;
+        margin: 0 20px; 
+        transition: 1s;
 
         &:last-child {
           margin-right: 0;
@@ -124,13 +146,34 @@ $orgLineColor :#ff6100;
             margin-top: 10px;
           }
         }
-        &:nth-of-type(2) {
+        &:nth-of-type(1) {
           top: 50px;
+        }
+        &:nth-of-type(2) {
+          top: 150px;
         }
 
         &:nth-of-type(3) {
-          top: 100px;
+          top: 225px;
           left:0;
+        }
+      }
+
+    }
+    &.on {
+      ul{
+        li {
+          &:nth-of-type(1) {
+            top: 0px;
+          }
+  
+          &:nth-of-type(2) {
+            top: 50px;
+          }
+  
+          &:nth-of-type(3) {
+            top: 100px;
+          }
         }
       }
     }
@@ -174,11 +217,23 @@ $orgLineColor :#ff6100;
         top:50%;
         transform: translateY(-50%);
         h3{
+          position: relative;
+          overflow: hidden;
           margin-bottom: 30px;
           font-size: 40px;
+          i {
+            opacity: 1;
+            animation: aniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
+          }
         }
         p {
           font-size: 18px;
+          position: relative;
+          overflow: hidden;
+          i {
+            opacity: 1;
+            animation: aniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
+          }
         }
 
       }
@@ -201,6 +256,13 @@ $orgLineColor :#ff6100;
         left: 0%;
         transform: translateX(0%);
         bottom:0;
+        .pic {
+          overflow: hidden;
+          i {
+            opacity: 1;
+            animation: aniLeft both cubic-bezier(0.680, 0, 0.265, 1) 1.2s 0.2s;
+          }
+        }
         .text_box {
           background:$bgColor;
           position: absolute;
@@ -222,6 +284,9 @@ $orgLineColor :#ff6100;
           }
         }
        }
+       &.on {
+         background: #000;
+       }
     }
   }
 
@@ -231,8 +296,6 @@ $orgLineColor :#ff6100;
     margin:0 auto;
     margin-top: 150px;
     width: 100%;
-
- 
     .o_box {
       margin: 0 auto;
       width: 180px;
@@ -306,7 +369,8 @@ $orgLineColor :#ff6100;
         top: -25px;
         left: 50%;
         transform: translateX(-50%);
-        width: 440px;
+        max-width: 440px;
+        width:100%;
         height: 1px;
         background: $orgLineColor;
       }
@@ -329,13 +393,12 @@ $orgLineColor :#ff6100;
         top: -25px;
         left: 50%;
         transform: translateX(-50%);
-        width: 880px;
+        max-width: 880px;
+        width:100%;
         height: 1px;
         background: $orgLineColor;
       }
       li {
- 
-        
         &:nth-child(3) {
           &:before {
             top: -50px;
@@ -360,6 +423,26 @@ $orgLineColor :#ff6100;
   }
 
   // Organization
+}
+
+
+//animation
+@keyframes opa {
+	0% {opacity: 0;}
+
+	50% {opacity: 0;}
+
+	51% {opacity: 1;}
+
+	100% {opacity: 1;}
+}
+
+@keyframes aniLeft {
+	0% {transform: translateX(-101%);}
+
+	50% {transform: translateX(0);}
+
+	100% {transform: translateX(101%);}
 }
 
 /*tablet --------------------------------------------------------*/
