--- a/scss/_sub_layout.scss
+++ b/scss/_sub_layout.scss
@@ -153,22 +153,23 @@
 
 		//모바일메뉴
 		.menuMo {
-			width: 270px;
+			width: 100%;
 			height: 100vh;
-			background: #333;
+			background: $bgColor;
 			padding: 35px 30px;
 			position: fixed;
 			top: 0;
-			left: -270px;
+			right:-100%;
 			z-index: 10;
 			transition: 0.5s;
+		
 
 			&.on {
-				left: 0;
+				right: 0;
 			}
 
 			h1 {
-				border-bottom: 1px solid #666;
+				border-bottom: 1px solid #fff;
 				padding-bottom: 30px;
 
 				a {
@@ -183,16 +184,72 @@
 					color: #aaa;
 				}
 			}
-
 			ul {
 				li a {
 					display: block;
 					padding: 20px 0;
-					border-bottom: 1px solid #444;
+					border-bottom: 1px solid #fff;
 					font: bold 14px/1 "Quicksand";
-					color: #888;
+					color: #fff;
 					text-align: center;
+					
 				}
+			}
+			.close {
+				position: absolute;
+				right: 30px;
+				top: 30px;
+
+				width: 20px;
+				height: 20px;
+			
+				z-index: 11;
+				color: #fff;
+				&::before {
+					content: "";
+					display: block;
+					width: 100%;
+					height: 2px;
+					background: #fff;
+					position: absolute;
+					top: 0;
+					left: 0;
+					transition: top 0.5s, transform 0.5s 0.5s;
+					top: 50%;
+					margin-top: -1px;
+					transform: rotate(45deg);
+				}
+	
+				&::after {
+					content: "";
+					display: block;
+					width: 100%;
+					height: 2px;
+					background: #fff;
+					position: absolute;
+					bottom: 0;
+					left: 0;
+					transition: bottom 0.5s, transform 0.5s 0.5s;
+					bottom: 50%;
+					margin-bottom: -1px;
+					transform: rotate(-45deg);
+				}
+	
+				span {
+					display: block;
+					width: 100%;
+					height: 2px;
+					background: #fff;
+					position: absolute;
+					top: 50%;
+					margin-top: -1px;
+					left: 0;
+					text-indent: -9999px;
+					transition: 0.5s;
+					transform: translateX(100%);
+					opacity: 0;
+				}
+
 			}
 		}
 	}
@@ -209,7 +266,8 @@
 		}
 
     .inner{
-        width:1180px; 
+        max-width:1180px; 
+				width:100%;
         margin:0 auto; 
         min-height:500px; 
 
@@ -252,9 +310,9 @@
 	background: #444;
 
 	.inner {
-		width: 1180px;
+		max-width: 1180px;
 		margin: 0 auto;
-
+		padding:0 20px;
 		&::after {
 			content: "";
 			display: block;
