--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -513,6 +513,10 @@ aside.pop {
             z-index: 10;
             background:#fff;
             padding:20px;
+           
+          }
+          .t_bg {
+            height:10%;
           }
         }
   
